--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Videogame producers
 email: "thenottgames@gmail.com"
+#linkedin_username: "linkedinuser"
 description: >- # this means to ignore newlines until "baseurl:"
   Videogame company
 #baseurl: "" # the subpath of your site, e.g. /blog
@@ -24,10 +25,28 @@ github_username:  Nottgaming
 
 repository: "Nott-Gaming/nott-gaming.github.io"
 
+rss: rss
+
+kramdown:
+  syntax_highlighter_opts:
+    disable: true
+
 # Build settings
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+
+titles_from_headings:
+  strip_title: true
+  collections: true
+
+defaults:
+  - scope:
+      path: ""
+      type: posts
+    values:
+      tags: Other
+
 
 # A list of the pages to display in the navigation bar
 header_pages:
