UPDATED: Adding twitter

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Videogame company
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
-#twitter_username: jekyllrb
+twitter_username: thenottgaming
 github_username:  Nottgaming
 
 repository: "Nott-Gaming/nott-gaming.github.io"
